«@startuml




 package ui {
         class DisableCandidateUI {
            +listEnabledCandidates()
            +printCandidates()
         }
     }




     package application {
         class DisableCandidateController {
             +disableCandidate()
             +enabledCandidates()
         }
     }

     package repository {

         interface CandidateRepository{
             +.save()
         }
     }

     package domain {
         class SystemUser{
             +.isActive()
             +.deactivate()
         }
         class AuthorizationService {
                +authorizationService() : AuthorizationService
                +ensureAuthenticatedUserHasAnyOf()
         }

         class Candidate {
             +.user()
         }

         class CandidateManagementService{
             +allCandidate()
             +disableCandidate()
         }
     }



 DisableCandidateUI --> DisableCandidateController
 Candidate --> SystemUser
 DisableCandidateController --> Candidate
 DisableCandidateController --> CandidateRepository
 CandidateRepository -> Candidate
 DisableCandidateController --> AuthorizationService
DisableCandidateController --> CandidateManagementService
CandidateManagementService -> CandidateRepository
 @enduml